마이바티스 세팅시 체크항목 표기

--- a/mybatis/환경설정.md
+++ b/mybatis/환경설정.md
@@ -1,9 +1,22 @@
 ### Mybatis setting with Spring framework
 
-#### 2021.12.08 Fri
+###### 2021.12.08 Fri
 
 ---
 
-Spring - mybatis 시작하기
+Spring - mybatis 초기 설정
 
-* step
+* check point
+  - dataSource
+  - SqlSessionFactory
+  - SqlSessionTemplate
+  - MapperScan
+
+위 4가지 항목을 빈으로 등록
+
+
+
+
+
+> 참고: https://mybatis.org/spring/ko/getting-started.html
+> 
