Update Spring basics

--- a/mybatis/환경설정.md
+++ b/mybatis/환경설정.md
@@ -1,22 +1,72 @@
-### Mybatis setting with Spring framework
+# Mybatis setting with Spring framework
 
-###### 2021.12.08 Fri
+<br>
 
----
-
+## 개요
 Spring - mybatis 초기 설정
 
 * check point
-  - dataSource
+  - dataSource (transactionManager)
   - SqlSessionFactory
   - SqlSessionTemplate
   - MapperScan
 
-위 4가지 항목을 빈으로 등록
+_+_ 스프링의 TransactionManager를 빈으로 등록하면 스프링의 TransactionManager와 융합된다.
+
+위 4가지 항목을 빈으로 등록 (transactionManager까지 합쳐서 5개)
 
 
 
+<br><br><br>
+<br><br><br>
 
 
-> 참고: https://mybatis.org/spring/ko/getting-started.html
-> 
+## Transactions
+마이바티스에 종속되는 새로운 TransactionManager를 만드는 것보다 Spring의 DataSourceTransactionManager와 융합하여 사용하는 것을 권장한다.
+
+
+
+``` java
+// Spring의 TransactionManager 설정 방법
+@Configuration
+public class DataSourceConfig {
+  @Bean
+  public DataSourceTransactionManager transactionManager() {
+    return new DataSourceTransactionManager(dataSource());
+  }
+}
+
+```
+
+<br>
+
+주의사항!
+> 원활한 트랜젝션 관리를 위해 TransactionManager에 설정된 DataSource와 SqlSessionFactoryBean을 생성할 때 사용한 DataSource가 **반드시** 동일해야한다.
+
+
+
+<br><br><br>
+
+
+
+detail
+---
+
+Marker Interface: TransactionManager <br>
+주요 인터페이스: **PlatformTransactionManager**, ReactiveTransactionManager 
+
+<br>
+
+Spring document에서는 예시로 PlatformTransactionManager의 구현체인 DataSourceTransactionManager(plain jdbc), JtaTransactionManager(JTA)를 사용하여 초기화하는 방법 서술 
+
+두 구현체의 인터페이스인 PlatformTransactionManager의 타입을 빈으로 등록
+
+
+<br><br><br>
+<br><br><br>
+<br><br><br>
+
+[참고] <br>
+  *-* 마이바티스 공식페이지 - https://mybatis.org/spring/ko/getting-started.html <br>
+  *-* 스프링 Data access Transaction - https://docs.spring.io/spring-framework/docs/current/reference/html/data-access.html#transaction-declarative <br>
+
