--- a/Project Design/프로젝트_설계.md
+++ b/Project Design/프로젝트_설계.md
@@ -2,8 +2,17 @@
 
 ## **요구사항 정의서** (Software Requirements Specification-SRS)
 
-flow
-> 요구사항 정의서 - 도메인 설계 및 관계 정의 - 엔티티 및 테이블 설계
+Flow
+> 1. 요구사항 정의서 (기능목록)
+> 2. 도메인 설계 및 관계 정의
+> 3. 엔티티 및 테이블 설계 (엔티티 먼저)
+
+* Database를 설계 中
+  1:N 관계의 두 테이블에서 외래키를 설정할 때는 N쪽에 FK를 설정한다.
+
+
+
+<br><br><br>
 
 
 ### 추상화란?
